# pymodoro

./: .gitignore  AGENTS.md  README.md  pyproject.toml
drafts/: app_constructor.py  dashboard_constructor.py  reloader.py
hot_reload/: reloader.py
src/pymodoro/: __init__.py  app.py  app_ui.py  break_screen.py  break_screen_widgets.py  check_in_screen.py  check_in_screen_widgets.py  cli.py  config.py  icon.py  metrics_io.py  metrics_logger.py  metrics_reader.py  notification_sound.py  session.py  settings.py  settings_ui.py  settings_window.py  settings_window_widgets.py  time_utils.py  tray.py  ui.py
src/pymodoro/app_ui_widgets/: calendar_page.py  dashboard.py  dashboard_old.py  dashboard_widgets_old.py  pages.py  settings_panel.py  settings_panel_widgets.py  sidebar.py
src/pymodoro/dashboard/: dashboard_ui.py
tests/: conftest.py  test_app.py  test_app_ui.py  test_check_in_screen_widgets.py  test_config.py  test_session.py  test_settings.py  test_settings_panel.py  test_settings_window.py  test_sidebar.py  test_tray.py
